syntax = "proto3";

message test_key {
    int32 VALUE = 1;
}
